feat: Implementação da activity de validação de entradas e handler de excpetions de bad request
